typescript/checker/tests/conformance/es6/templates/templateStringUnterminated1_ES6.ts.stderr
error: Unexpected eof
 --> $DIR/tests/conformance/es6/templates/templateStringUnterminated1_ES6.ts:2:2
  |
2 | `
  |  ^

